--- a/styles/shared.css
+++ b/styles/shared.css
@@ -4,41 +4,25 @@ body {
     쓴다고해서 이미지의 정렬이 바뀌지 않고 이미지 밖에 쌓여져 있는 바디 태그를 수정해야함  */
     text-align: center;
     background-color: rgb(233,215,207);
+    color: rgb(83,75,75);
     margin: 50px;
 }
 
-img{
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;   
-}
-
 h1 {
-  /*fall-back font 두번째 요소 =  첫번째 폰트를 못 불러올 떄 대신 로드 */
   font-family: "Oswald", sans-serif;
-  color: rgb(83, 75, 75);
 }
 
 p {
-  font-family: "Fira Sans", sans-serif;;
-  color: rgb(83, 75, 75);
+  font-family: "Fira Sans", sans-serif;
 }
 
 a {
+  font-family: "Fira Sans", sans-serif;
   color: rgb(167, 1, 78);
   text-decoration: none;
 }
-/*hover 를 사용해서 마우스 커서를 올렸을 때 동작을 지정해줄 수 있다 */
 
+/*hover 를 사용해서 마우스 커서를 올렸을 때 동작을 지정해줄 수 있다 */
 a:hover {
   text-decoration: underline;
 }
-
-#todays-challenge {
-  color: rgb(170, 96, 83);
-  font-weight: bold;
-  font-size: 52px;
-}
-
-
-
