--- a/styles/shared.css
+++ b/styles/shared.css
@@ -1,11 +1,11 @@
 body {
-    /*body 안에 있는 요소를 가운데로 정렬시키고 싶을 때 사용 
+  /*body 안에 있는 요소를 가운데로 정렬시키고 싶을 때 사용 
     text-align은 태그 안의 요소들의 배치를 담당한다 그래서 이미지 태그에다가
     쓴다고해서 이미지의 정렬이 바뀌지 않고 이미지 밖에 쌓여져 있는 바디 태그를 수정해야함  */
-    text-align: center;
-    background-color: rgb(233,215,207);
-    color: rgb(83,75,75);
-    margin: 50px;
+  text-align: center;
+  background-color: rgb(233, 215, 207);
+  color: rgb(83, 75, 75);
+  margin: 50px;
 }
 
 h1 {
